--- a/style.css
+++ b/style.css
@@ -8,19 +8,50 @@ body {
     flex-direction: column;
 }
 
+.header,.content, .quote, .signup {
+    padding: 5px 80px;
+}
+
 .header, .footer {
     background-color: #1F2937;
     display: flex;
+    flex-direction: column;
+}
+
+.headtext {
+    max-width: 400px;
+}
+
+li {
+    display: inline;
+    margin: 10px;
+}
+
+.links {
+    display: flex;
+    justify-content: space-between;
+    margin: 0;
+    background-color: #1F2937;
+    padding: 0 10px;
 }
 
 ul, .subtext {
     list-style-type: none;
     color: #E5E7EB;
-    font-size: 18px
+    font-size: 18px;
+    
+    
 }
 
-h1, h4, button {
+h1, h4, button, li , .signup, .footer{
     color: #F9FAF8;
+}
+
+button , .signup{
+    font-weight: 700;
+    border: 2px solid #F9FAF8;
+    font-size: 20px;
+    padding: 5px 10px;
 }
 
 h1 {
@@ -32,22 +63,68 @@ h4 {
     font-size: 24px;
 }
 
-button, .signup {
+button, .signup, img {
     background-color: #3882F6;
+    border-radius: 10px;
 }
 
 .content {
     display: flex;
-    flex-flow: column wrap;
+    justify-content: space-evenly;
+    margin-top: 30px;
+    gap: 20px;
+    padding-bottom: 50px;
+}
+
+.info {
+    max-width: 200px;
+
 }
 
 h2 {
     font-size: 36px;
     font-weight: 900;
     margin: auto;
+    margin-top: 20px;
 }
 
 .quote {
     background-color: #E5E7EB;
     font-size: 36px;
+    display: flex;
+    flex-direction: column;
+    padding-top: 30px;
+}
+
+strong {
+   align-self: flex-end;
+   margin-bottom: 25px;
+
+    
+    
+}
+
+.quote-text {
+    font-weight: 200;
+    font-style: italic;
+    margin-bottom: 25px;
+}
+
+.signup {
+    padding: 20px;
+    margin: 80px 20%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 30px;
+}
+
+button {
+    display: flex;
+    flex-shrink: 0;
+    margin: 20px 0;
+}
+
+.footer {
+    align-items: center;
 }
